--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,28 @@ s3transfer==0.10.2
 setuptools==69.5.1
 sqlparse==0.5.0
 stripe==10.2.0
+asgiref==3.8.1
+black==24.4.2
+boto3==1.34.144
+botocore==1.34.144
+click==8.1.7
+dj-database-url==0.5.0
+Django==3.2.25
+django-allauth==0.41.0
+django-countries==7.2.1
+django-crispy-forms==1.14.0
+django-storages==1.14.4
+gunicorn==22.0.0
+jmespath==1.0.1
+oauthlib==3.2.2
+pathspec==0.12.1
+pillow==10.4.0
+psycopg2==2.9.9
+python-decouple==3.8
+python3-openid==3.2.0
+pytz==2024.1
+requests-oauthlib==2.0.0
+s3transfer==0.10.2
+setuptools==69.5.1
+sqlparse==0.5.0
+stripe==10.2.0
